--- a/turan.bib
+++ b/turan.bib
@@ -26,3 +26,87 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{tiskin:packing,
+  author    = {Alexandre Tiskin},
+  title     = {Packing tripods: Narrowing the density gap},
+  journal   = {Discrete Mathematics},
+  volume    = {307},
+  number    = {16},
+  pages     = {1973--1981},
+  year      = {2007},
+  url       = {http://dx.doi.org/10.1016/j.disc.2004.12.028},
+  doi       = {10.1016/j.disc.2004.12.028},
+  timestamp = {Thu, 04 Oct 2007 14:42:27 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/dm/Tiskin07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{stein:combinatorial,
+  author = {Sherman Stein},
+  journal = {IEEE Transactions on Information Theory},
+  title = {Combinatorial packing of {$R^n$} by certain error spheres},
+  volume = {30},
+  number = {2},
+  year = {1984},
+  pages = {364--368},
+}
+
+@article{stein:packing,
+  author = {Sherman K. Stein},
+  title = {Packing tripods},
+  journal = {Mathematical Intelligencer},
+  volume = 17,
+  number = 2,
+  pages = {37--39},
+  year = 1995,
+}
+
+@book {stein.szabo:algebra,
+  author = {Sherman K. Stein and S{\'a}ndor Szabó},
+  title = {Algebra and Tiling: Homomorphisms in the Service of Geometry},
+  series = {The Carus Mathematical Monographs},
+  volume = {25},
+  publisher = {The Mathematical Association of America},
+  year = {1994}
+}
+
+@misc{gowers.long:length,
+  title = {The Length of an $s$-increasing sequence of $r$-tuples},
+  author = {W. T. Gowers and J. Long},
+  howpublished = {arxiv:1609.08688},
+  year = {2016}
+}
+
+@misc{loh:directed,
+  title = {Directed paths: from {R}amsey to {R}uzsa and {S}zemerédi},
+  author = {Po-Shen Loh},
+  howpublished = {arxiv:1505.07312v2},
+  year = {2016}
+}
+
+@article{fox:new,
+  author = {J. Fox},
+  title = {A New Proof of the Graph Removal Lemma},
+  journal = {Annals of Mathematics},
+  volume = {174},
+  year = {2011},
+  pages = {561--579}
+}
+
+@misc{oeis:a070214,
+  author = {N. J. A. Sloane},
+  title = {The Online Encyclopedia of Integer Sequences},
+  url = {http://oeis.org/},
+  note = {Sequence number A070214}
+}
+
+@article{ruzsa.szemeredi:triple,
+  author = {I. Z. Ruzsa and E. Szemer{\'e}di},
+  title = {Triple systems with no six points carrying three triangles},
+  journal = {Combinatorics (Keszthely, 1976)},
+  volume = {18},
+  year = {1978},
+  pages = {939--945},
+  publisher = {NorthHolland},
+  address = {Amsterdam-New York}
+}
