Small change suggested by Luis

--- a/turan.tex
+++ b/turan.tex
@@ -241,9 +241,9 @@ in \secref{new-results}.
 \section{Points of View and Easy Results}
 \seclabel{points-of-view}
 
-In this section we present an easy result that cuts our work in half
-and we describe different variants of the problem, some of which are
-easier to work with.  
+In this section we present an easy result that cuts our work in half and
+we describe different variants of the problem, some of which are easier
+to work with.
 
 \subsection{Edge-Sharing Non-Overlapping Triangles are Irrelevant}
 
@@ -869,11 +869,11 @@ In this section, we discuss $\ex(n,\{\taco,\nested\})$.
 
 Determining the asymptotics of $\ex(n,\{\taco,\nested\})$ was given
 explicitly as open problem in the conclusion of Bra\ss's paper.  We spent
-more than a year work on this problem and this work included computer
-searches for solutions for small values of $n$.  Using the results of
+more than a year work on this problem.  This work included computer
+searches for a variant of the problem played on the square grid $\{1,\ldots,n\}^2$.  Using the results of
 these computer searches in the Online Encyclopedia of Integer Sequences
 \cite{oeis:a070214}, we discovered that this problem is (asymptotically)
-equivalent to several other known problems.
+equivalent to several other known problems.  (See \figref{tripods}.)
 
 \begin{enumerate}
   \item Monotone matrices: How many values from $\{1,\ldots,n\}$ can
