--- a/turan.tex
+++ b/turan.tex
@@ -875,6 +875,15 @@ these computer searches in the Online Encyclopedia of Integer Sequences
 \cite{oeis:a070214}, we discovered that this problem is (asymptotically)
 equivalent to several other known problems.  (See \figref{tripods}.)
 
+\begin{figure}
+  \begin{center}
+    \includegraphics{figs/tripods}
+  \end{center}
+  \caption{The dot-puzzle induced by excluding the taco and nested configurations
+    has already been studied under several equivalent formulations.}
+  \figlabel{tripods}
+\end{figure}
+
 \begin{enumerate}
   \item Monotone matrices: How many values from $\{1,\ldots,n\}$ can
   one write in an $n\times n$ matrix so that each row is increasing,
@@ -917,7 +926,7 @@ We point out a few bibliographic notes about these problems:
   matrices.
   
   \item Tiskin \cite{tiskin:packing}, apparently unaware of the relation
-  between tripod packing and the Rusza-Szemeredi induced matching problem,
+  between tripod packing and the Rusza-Szemer{\'e}di induced matching problem,
   also proved an upper bound of $o(n^2)$. His proof uses the same tools
   (namely Szemeredi's Regularity Lemma) as the original proofs of the
   Ruzsa-Szemer{\'e}di bounds.
@@ -926,15 +935,15 @@ We point out a few bibliographic notes about these problems:
   that the problem on 2-comparable sets of triples was studied under
   other names.
   
-  \item Gowers and Long \cite{gowers.long:length} arrived 2-comparable
+  \item Gowers and Long \cite{gowers.long:length} arrived at 2-comparable
   sets as a relaxation of a problem (the size of the largest 2-increasing
-  sequence of triples).  proposed by Lo \cite{loh:directed}.  In his
+  sequence of triples)  proposed by Loh \cite{loh:directed}.  In his
   discussion of this problem, Loh formulates a restricted version of
   the induced matching problem, in which the matching must satisfy a
-  $\sigma$-free property and expresses hope \cite[Remark~9]{loh:directed}
+  $\Sigma$-free property and expresses hope \cite[Remark~9]{loh:directed}
   that this restricted version has an $O(n^{3/2})$ upper bound.  However,
-  solutions for tripod packing correspond to $\sigma$-free induced
-  matchings, so $\sigma$-free induced matchings of size $\omega(n^{3/2})$
+  solutions for tripod packing correspond to $\Sigma$-free induced
+  matchings, so $\Sigma$-free induced matchings of size $\omega(n^{3/2})$
   are already known.
 \end{itemize}
 
