--- a/turan.tex
+++ b/turan.tex
@@ -80,7 +80,7 @@ urlcolor=linkblue, pdfcreator=Me, pdfproducer=Me} \setlength{\parskip}{1ex}
 
 Let $t_1$ and $t_2$ be a pair of distinct triangles whose (4--6) vertices
 are in convex position.  There are 8 combinatorially distinct ways that
-these triangle can interact:  2 ways in which the triangles can share
+these triangles can interact:  2 ways in which the triangles can share
 an edge (\taco\ and \mariposa), 3 ways in which the triangles can share a
 single vertex (\bat, \nested, and \crossing), and 3 ways in which
 the triangles can have no vertices in common (\ears, \swords,
@@ -248,7 +248,7 @@ different variants of the problem, some of which are easier to work with.
 
 \subsection{Edge-Sharing Non-Overlapping Triangles are Irrelevant}
 
-The following lemma shows that including the $\mariposa$ confguration in
+The following lemma shows that including the $\mariposa$ configuration in
 the set $X$ of forbidden configurations has no effect on the asymptotics
 of $\ex(n,X)$.
 
@@ -291,6 +291,29 @@ of $\ex(n,X)$.
 \end{proof}
 
 
+\subsection{Linear-Sized Sets Using only a Single Configuration}
+
+Since it is not explicitly stated in previous work, and we need it to complete our table, we now observe that for any configuration $x\in\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$, one can have a linear number of triangles such that each pair of triangles is in configuration $x$.
+
+\begin{thm}
+For any $X\subset\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$,
+$\ex'(n,X)\in \Omega(n)$.
+\end{thm}
+
+\begin{proof}
+  Let $x\in\{\taco,\bat,\nested,\crossing,\ears,\swords,\david\}$ be configuration not in $X$.  Label the vertices of our convex $n$-gon $1,\ldots,n$ in counterclockwise order.  We use the following constructions:
+ \begin{enumerate}
+    \item For $x=\taco$ we use the set of triangles $\{(1,2,i):i\in\{3,\ldots,n\}\}$.
+    \item For $x=\bat$ we use the set of triangles $\{(1,3i-1,3i-2: i\in\{1,\ldots,\lfloor n/3\rfloor \}$.
+    \item For $x=\nested$ we use the set of triangles $\{(1,i,n+2-i): i\in\{2,\lfloor n/2\rfloor\}\}$.
+    \item For $x=\crossing$ we use the set of triangles $\{(1,i,\lfloor n/2\rfloor+i): i\in\{2,\lfloor n/2\rfloor\}-1\}$.
+    \item For $x=\ears$ we use the set of triangles $\{(3i-2,3-1,3i): i\in\{1,\lfloor n/3\rfloor\}\}$.
+    \item For $x=\swords$ we use the set of triangles $\{(i,\lfloor n/2\rfloor+2i-2,\lfloor n/2\rfloor+2i-1): i\in\{1,\lfloor n/2\rfloor\}\}$.
+    \item For $x=\david$ we use the set of triangles $\{(i,\lfloor n/3\rfloor+i,\lfloor 2n/3\rfloor+i): i\in\{1,\lfloor n/3\rfloor\}\}$.
+ \end{enumerate}
+\end{proof}
+
+
 
 \subsection{The Top/Bottom View}
 
@@ -314,7 +337,7 @@ When studying $\ex'$, each triangle we count has a naturally defined
   \figlabel{top-bottom}
 \end{figure}
 
-Clearly $\ex(n,X)\ge\ex'(n,x)$.  The following lemma shows that, without
+Clearly $\ex(n,X)\ge\ex'(n,X)$.  The following lemma shows that, without
 losing much precision, we can also upper bound $\ex(n,X)$ by $\ex'(n,X)$.
 
 \begin{lem}\lemlabel{top-bottom}
@@ -342,7 +365,7 @@ losing much precision, we can also upper bound $\ex(n,X)$ by $\ex'(n,X)$.
         most $\ex(\lfloor n/2\rfloor,X)$ such triangles.
    \end{enumerate}
    Thus, we obtain the recurrence inequality:
-   \[  \ex(n,X) = O(n^{c}) + \ex(\lceil n/2\rceil,X) + \ex(\lfloor n/2\rfloor,X) \]
+   \[  \ex(n,X) \le O(n^{c}) + \ex(\lceil n/2\rceil,X) + \ex(\lfloor n/2\rfloor,X) \]
    which resolves to $O(n^c)$ for $c>1$ and $O(n\log n)$ for $c=1$.
 \end{proof}
 
@@ -488,11 +511,12 @@ O(n^2)$.  For the game defined by $X=\{\nested\}$, we have the rules:
 \begin{center}
   \includegraphics[height=3cm]{figs/helper-3}
 \end{center}
-In particular, these rules imply that points selected during a single
-round of the dot puzzle must be non-decreasing, and thus at most $2n-3$
-points can be selected take part in $Q_i$.  Thus $\sum_{j=1}^{n}|Q_i| \le
-2n^2-3n$, so $\ex'(n,\nested)\in O(n^2)$ and the bound $\ex(\nested)\in
-O(n^2)$ immediately follow from \lemref{top-bottom}.
+In particular, these rules imply that points selected during a
+single round of the dot puzzle must be non-decreasing, and thus
+at most $2n-3$ points can be selected take part in $Q_i$.  Thus
+$\sum_{j=1}^{n}|Q_i| \le 2n^2-3n$, so $\ex'(n,\{\nested\})\in O(n^2)$
+and the bound $\ex(n,\{\nested\})\in O(n^2)$ immediately follows from
+\lemref{top-bottom}.
 
 Similarly, we can almost recover the result of Bra\ss, Rote and
 Swanepoel \cite{brass.rote.ea:triangles} on $\ex(\ears, \swords,
@@ -563,11 +587,11 @@ the $\swords$ configuration.
 \subsection{Forbidding Crossing Vertex-Disjoint Triangles}
 
 In this section, we focus on the configuration $\swords$ and give
-tight bounds bounds on $\ex'(n,\{\swords, Y\})$ for each of the
-seven $Y\in\{\taco,\mariposa,\bat,\nested,\crossing,\ears,\david\}$.
-Note that the bound $\ex'(n,\{\swords,\mariposa\})\in \Theta(n^2)$ is
-immediate from bound $\ex(n,\{\swords\}\in\Theta(n^2)$ \cite{brass:turan}
-and \lemref{xcup}.
+linear upper bounds bounds on $\ex'(n,\{\swords, Y\})$ for each
+$Y\in\{\taco,\nested,\crossing\}$.  In \secref{lower-bounds}, we show
+that $\ex'(n,\{\swords,\mariposa,\bat,\ears,\david\})\in \Omega(n^2)$.
+Together, these two results completely determine $\ex'(n,\{\swords\}\cup
+X\})$ for any $X$.
 
 In the following, we use the notation $\xmin(S)$ to denote the
 minimum $x$-coordinate of any point in the point set $S$.  
@@ -1024,6 +1048,7 @@ caused by $\bat$ and $\ears$ do not affect the lower-right quadrant.
 \end{thm}
 
 \subsection{Lower Bounds}
+\seclabel{lower-bounds}
 
 Finally, we clean up with some $\Omega(n^2)$ lower bound constructions.
 In each case, a matching upper bound follows from one of the results in
